css/style.css
/* ... */
#commentform #submit {
    width: 90px;
    padding: 6px 0;
    margin-left: 102px;
}

.bluebox_content_quarter, .related_posts_hr {
    width: 147px;
    display: inline-block;
    text-align: center;
    vertical-align: top;
    line-height: 19px;
    margin: 0 5px;
}
.related_posts_hr {
    margin: 10px 5px 15px;
}

.bluebox_content_quarter img {
    margin-bottom: 10px;
}

.blog_single_bluebox_primary .bluebox_content_top {
    margin-top: 5px;
}

.whitebox_primary_flwbtn {
    margin-top: 10px;
}

h2.subTitle {
    font-size: 15px;
    margin-top: 15px;
    font-weight: bold;
}

.opengraphprotocoltools-div {
    width: 92px;
    height: 20px;
    padding: 0!important;
    margin: 8px 0 0 0px!important;
}

.fb_iframe_widget {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 44px;
}

#___plusone_0 {
    margin-top: 9px;
}

/************** COMMENTS ****************/

.comments {
    margin-top: 20px;
}

.comments ul {
    margin: 20px 0;
}


.comments li {
    margin: 0 0 15px;
}

.comments h3 {
    font-size: 18px;
    text-transform: lowercase;
    text-decoration: underline;
}

.comment-author, .comment-meta {
    font: 11px arial, sans-serif;
    display: inline-block;
}

.comment-meta-author {
    margin-bottom: 5px;
}

/************** BLOG ARCHIVE ***********/

.blog_whitebox_primary_title_only .whitebox_primary_post h3/*, .log-archive .whitebox_primary h3*/ {
    font-size: 18px;
    line-height: 19px;
    margin: 0;
    padding: 1px 0 4px;
    letter-spacing: 1px;
}

.blog_whitebox_primary_title_only .whitebox_primary_post {
    display: block;
}

.blog_whitebox_primary_title_only h3 a {
    color: #00aeff;
}

.blog_bluebox_primary a {
    color: #484848;
}

/************** TAGS ******************/

.blog_bluebox_primary a[title="1 topic"] {
    color: #989898;
}

.blog_bluebox_primary a[title="2 topics"] {
    color: #888888;
}

.blog_bluebox_primary a[title="3 topics"] {
    color: #787878;
}

.blog_bluebox_primary a[title="4 topics"] {
    color: #787878;
}

.blog_bluebox_primary a[title="5 topics"] {
    color: #686868;
}

.blog_bluebox_primary a[title="6 topics"] {
    color: #686868;
}

.blog_bluebox_primary a[title="7 topics"] {
    color: #585858;
}

.blog_bluebox_primary a[title="8 topics"] {
    color: #585858;
}

/************** what others have said about the raakonteur ************/

.theraakonteur_whitebox_primary hr.solid {
    margin: 10px 0 15px;
}

.raakonteur_bluebox_primary ul {
    margin: 10px 0;
}

.raakonteur_bluebox_primary hr {
    margin-bottom: 5px;
}

/*************** 404 *******************/

.not-found blockquote {
    margin-top: 16px;
    color: #888888;
}

/************** Twitter Users ************/

#see_yourself_form input {
    vertical-align: top;
}

#see_yourself_form input[name="screen_name"] {
    padding: 5px;
}

#see_yourself_form input[name="submit_screen_name"] {
    height: 25px;
    margin: 2px;
}

#see_yourself_form form {
    margin-top: 8px;
}


/************** Sidebar ***************/

/************** Mail Chimp **************/

#mailchimp_top {
    background: url(../images/sidebar_raakonteur_top.png);
    height: 41px;
}

#mailchimp_body {
    background: #bebebe;
    padding: 8px 10px 2px;
}

/****** mailchimp reset **********/

#mc_embed_signup * {
    background: none!important;
    border: 0!important;
    color: #ffffff!important;
    font-size: 11px!important;
    text-align: left!important;
    padding: 0!important;
    line-height: 17px;
    left: 0!important;  /* for IE 8 */
}

/********* end reset ***********/


#mc_embed_signup a {
    color: #b9e5fb !important;
}


#mc_embed_signup div span {
    display: block;
    margin-top: 10px;
}

.mc-field-group {
    margin: 10px 0 0!important;
}

#mc_embed_signup .mc-field-group label {
    font-size: 9px!important;
    font-family: arial, sans-serif;
    text-transform: uppercase;
    color: white;
    font-weight: normal!important;
}


#mc_embed_signup .mc-field-group input {
    background: #ffffff!important;
    width: 100%!important;
    margin: 0!important;
    height: 25px;
    color: #666666!important;
}

#mc-embedded-subscribe-container input[type="submit"] {
    background: #ffffff!important;
    width: 78px!important;
    height: 25px;
    margin: 25px 0 7px!important;
    color: #00aeef!important;
    text-align: center!important;
    text-transform: uppercase;
    font-size: 9px!important;
}

.indicate-required {
    font-style: normal!important;
    font-family: 'helvetica neue', helvetica, arial, sans-serif;
}

/********* Twitter ***********/

.twitter {
    margin-top: 14px;
}

.twitter_top {
    background: url(../images/sidebar_twitter_top.png);
    height: 26px;
    padding: 15px 0 0 10px;
}


.twitter_body {
    background: #bebebe;
    padding: 7px 10px 2px;
}

.twitter_body .twtr-widget * {
    color: #ffffff!important;
    background: none!important;
    font: 11px arial, sans-serif;
}


.twitter_body .twtr-widget a {
    color: #b9e5fb !important;
}


.twitter_body .twtr-widget .twtr-doc {
    width: 161px!important;
}


.twitter_body .twtr-widget .twtr-tweet-wrap {
    padding: 0;
}

.twitter_top a {
    font: 14px din_schift, arial, sans-serif;
    letter-spacing: 1px;
    color: white;
    margin-top: 10px;
    border-bottom: 2px solid #B9E5FB;
    padding-bottom: 3px;
}

.twtr-hd h4, .twtr-profile-img-anchor {
    display: none;
}

.twtr-hd {
    border-bottom: 1px dotted #dddddd;
    padding: 0 0 10px 0 !important;
    width: 160px;
    text-transform: uppercase;
}

.twtr-widget .twtr-doc .twtr-hd h3 {
    margin: 0!important;
    font: 9px 'Lucida Grande', arial, sans-serif!important;
}

.twtr-tweet {
    padding: 10px 0;
}

.twtr-widget em a {
font-size: 9px!important;
}

.twtr-ft {
    margin-top: 15px!important;
    border-top: 1px solid #B9E5FB;
}

.twtr-ft div {
    padding: 5px 0 10px!important;
}

.twtr-ft span {
    float: none!important;
    text-align:right;
}

.twtr-ft img {
    display: none;
}
/* ... */

